      compatibility issues or a wrong browser version check, please file a bug
      at FCKeditor development or browser development.
    * Mail notifications contain a link to the diff action so the user
      can see the coloured difference more easily. Thanks to Tobias Polzin.
    * Refactored conflict resolution and XMLRPC code.
    * Added a module for binary diffs


Version 1.5-current:
   * moin.fcg improved - if you use FastCGI, you must use the new file:
     * can self-terminate after some number of requests (default: -1, this means
       "unlimited lifetime")
     * the count of created threads is limited now (default: 5), you can use 1
       to use non-threaded operation.
     * configurable socket.listen() backlog (default: 5)
  * tuning:
    * more efficient locking code on POSIX platforms, we do much less I/O there now
    * removed most chmod calls in favour of a single os.umask call
  * fixed a bad crash that happens (on ANY page!) when you put a *Dict page's
    name as a member into a *Group page
  
Version 1.5.4:
    HINT: read docs/README.migration.
Version 1.5.4-current:
    * increased maxlength of some input fields from 80 to 200

Version 1.5.current:
  Developer notes:
    * We switched to Mercurial SCM, see here for more infos:
      http://moinmoin.wikiwikiweb.de/MoinDev/MercurialGuide

  Bugfixes:
    * fix MonthCalendar macro for non-ASCII pagenames (thanks to Jonas Smedegaard)
    * remove 'search' and 'google' from bot user agent list and add some more
      specific terms
    * Fix the forgotten password email login URL and also properly encode the
      email body. Thanks to Robin Dunn for the patch.
    * Applied a patch by Matthew Gilbert for increased compatiblity with
      latest docutils.


Version 1.5.3:
  New Features:
    * Added CSS classes for TableOfContents macro.

  Bug Fixes:
    * GUI editor / GUI editor converter:
      * Fixed missing GUI editor link in edit bar.
      * Fixed table/row/cell style spaces.